--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-jobapply}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-jobapply}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-jobapply} -d ${POSTGRES_DB:-jobapply}"]
       interval: 5s
@@ -25,12 +25,14 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - .:/app
     command: >
       bash -lc "
+      poetry install --no-interaction --no-ansi &&
       poetry run python manage.py migrate &&
       poetry run python manage.py runserver 0.0.0.0:8000
       "
+
 
 volumes:
   pgdata:
