--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -8,12 +8,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential curl \
   && rm -rf /var/lib/apt/lists/*
 
-# Poetry
 RUN pip install --no-cache-dir poetry==2.0.1
 
-COPY pyproject.toml /app/pyproject.toml
+COPY pyproject.toml poetry.lock /app/
 
 RUN poetry config virtualenvs.create false \
   && poetry install --no-interaction --no-ansi
 
-COPY app /app
+COPY . /app
