--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openpyxl = "^3.1.5"
 google-auth = "^2.33.0"
 google-auth-oauthlib = "^1.2.1"
 google-api-python-client = "^2.141.0"
+pyjwt = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
