--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ POSTGRES_PASSWORD=jobapply
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=admin12345
+
 # allauth / google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
