--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ DJANGO_SUPERUSER_PASSWORD=admin12345
 # allauth / google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+DJANGO_SITE_DOMAIN=0.0.0.0:8000
+DJANGO_SITE_NAME=JobApply
