--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ google-auth = "^2.33.0"
 google-auth-oauthlib = "^1.2.1"
 google-api-python-client = "^2.141.0"
 pyjwt = "^2.10.1"
+pytest = "^9.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
+pytest-django = "^4.11.1"
 
 [tool.ruff]
 line-length = 100
