verify turnstile added

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 DJANGO_SITE_DOMAIN=0.0.0.0:8000
 DJANGO_SITE_NAME=JobApply
+
+TURNSTILE_SITE_KEY=0x....
+TURNSTILE_SECRET_KEY=0x....
+TURNSTILE_ENABLED=1
