hide admin url in env

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=admin12345
 
+ADMIN_URL=backoffice
+
 # allauth / google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
