--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ GOOGLE_CLIENT_SECRET=
 DJANGO_SITE_DOMAIN=0.0.0.0:8000
 DJANGO_SITE_NAME=JobApply
 
+# Cloudflare Turnstile (anti-bot gate before Google OAuth, anonymous users only)
 TURNSTILE_SITE_KEY=0x....
 TURNSTILE_SECRET_KEY=0x....
 TURNSTILE_ENABLED=1
